--- a/views/article.ejs
+++ b/views/article.ejs
@@ -37,6 +37,7 @@
         <div class="ck-content"><%- article.content %></div>
       </div>
     </div>
+    <%- include("./partials/footer") %>
   </body>
   <script src="/script.js"></script>
 </html>
