--- a/views/article_edit.ejs
+++ b/views/article_edit.ejs
@@ -120,7 +120,7 @@
           </div>
         </div>
         <textarea name="content" id="editor" placeholder="Hello~"></textarea>
-        <button id="save" class="save btn">儲存</button>
+        <!-- <button id="save" class="save btn">儲存</button> -->
         <button type="submit" class="submit btn">發表</button>
       </form>
     </div>
