--- a/views/login.ejs
+++ b/views/login.ejs
@@ -39,7 +39,7 @@
           <button class="btn" type="submit">登入</button>
         </form>
         <div class="register-group">
-          <a href="#">忘記密碼</a>
+          <!-- <a href="#">忘記密碼</a> -->
           <span>沒有帳號？<a href="/auth/register">註冊</a></span>
         </div>
       </div>
