--- a/views/about.ejs
+++ b/views/about.ejs
@@ -7,13 +7,12 @@
   </head>
   <body>
     <%- include("./partials/nav") %>
+    <img
+      class="background-img"
+      src="/pic/GoCommunity_Logo.svg"
+      alt="Go Community Logo"
+    />
     <div class="full-page">
-      <div class="background-img">
-        <img
-          src="./pic/AboutPage/GoCommunity_Logo_NoFill.svg"
-          alt="GoCommunity_Logo"
-        />
-      </div>
       <div class="container">
         <h1>About me</h1>
         <div class="text">
@@ -29,7 +28,7 @@
             隨著時間流逝，伊角哥哥也變成了伊角弟弟，總是想著「聽到的故事已經那麼棒了，那親自走訪故事場景不是更棒嗎？」
           </p>
           <p>
-            於是2019年3月辭掉工作去日本進行為期一年的打工度假，當時立下的目標就是盡量走訪圍棋有關的景點並記錄下來，也在粉專上分享給各位棋友。第一站從岡山開始，然後四國、關西、金澤、關東、東京、北海道，雖然現在國際上日本圍棋沒落，但不愧是圍棋文化深厚的國家，不論城市或鄉下都有圍棋的蹤影。令人印象深刻的是本因坊的發祥地，京都寂光寺是圍棋人皆知的聖地，原址已在西元1708年被祝融吞噬，當地商店街便在接立了本因坊發祥地的紀念碑棋盤、甚至販售碁石糖果，讓當地人甚至是像我一樣的過客能多了解當地的故事還有圍棋。
+            於是2019年3月辭掉工作去日本進行為期一年的打工度假，當時立下的目標就是盡量走訪圍棋有關的景點並記錄下來，也在粉專上分享給各位棋友。第一站從岡山開始，然後四國、關西、金澤、關東、東京、北海道，雖然現在國際上日本圍棋沒落，但不愧是圍棋文化深厚的國家，不論城市或鄉下都有圍棋的蹤影。令人印象深刻的是本因坊的發祥地，京都寂光寺是圍棋人皆知的聖地，原址已在西元1708年被祝融吞噬，當地商店街便在街上立了本因坊發祥地的紀念碑棋盤、甚至販售碁石糖果，讓當地人甚至是像我一樣的過客能多了解當地的故事還有圍棋。
           </p>
           <p>
             回台灣後，也想把這份感動傳達給棋友，有想過寫書，但想說文筆那麼爛大概也沒什麼人會買(笑)，因此作罷。那不如架個網站，把遊記和經歷過的都放上去吧！
@@ -37,10 +36,12 @@
           <p>
             所以就做了一個網站，把經歷過的景點、遊記都放上來，註冊登入後會有收藏文章的功能，有喜歡的景點就收藏起來吧！功能和美觀方面需要改善的地方還很多，但我想比起瀏覽FB相簿還是好點，每學道點東西就會再把網站作提升，現在大家就將就一下吧(笑)
           </p>
-          <p>最後，希望大家在對抗疫情期間，大家也能在這裡「偽出國」玩得愉快</p>
+          <p>
+            最後，希望大家在對抗疫情期間，大家也能在這裡「偽出國」玩得愉快！
+          </p>
         </div>
         <h1>Contact Me</h1>
-        <div class="connact-box">
+        <div class="contact-box">
           <a href="mailto:b1233967@gmail.com"
             ><img
               src="./pic/Gmail_Icon_(2013-2020).svg"
