--- a/views/article-overview.ejs
+++ b/views/article-overview.ejs
@@ -50,7 +50,8 @@
           </div>
         </div>
       </div>
-    </main>
+    </main>    
+    <%- include("./partials/footer") %>
+    <script src="/script.js"></script>
   </body>
-  <script src="/script.js"></script>
 </html>
