Fix google login bug

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,7 +9,7 @@
     <%- include("./partials/nav") %>
     <div class="onepage-wrap">
       <div class="form-wrap">
-        <a class="google_login" href="">
+        <a class="google_login" href="/auth/google">
           <img src="../pic/Google__G__Logo.svg" alt="Google Logo" />
           <h2>Google註冊</h2>
         </a>
